# crypto-broker-collector

./: .gitignore  CMakeLists.txt  Dockerfile  readme.md  test-docker-release
src/: coingecko_comm.cpp  coingecko_comm.h  coingecko_parser.cpp  coingecko_parser.h  dao.cpp  dao.h  http.h  main.cpp  syncQueue.cpp  syncQueue.hpp  types.h
